Kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-backend
spec:
  selector:
    matchLabels:
      app: spring-backend
  replicas: 1
  template:
    metadata:
      labels:
        app: spring-backend
    spec:
      containers:
        - name: spring-backend
          image: narjesknaz/spring-backend:latest
          ports:
            - containerPort: 9090
          startupProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            failureThreshold: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 9090
            initialDelaySeconds: 30
            periodSeconds: 10
