Kubernetes/spring-backend-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: spring-backend-service
spec:
  selector:
    app: spring-backend
  ports:
    - protocol: TCP
      port: 9091  # Port d'accès depuis l'extérieur du cluster
      targetPort: 9090  # Port sur lequel l'application Spring Boot écoute dans le container
  type: ClusterIP  # ClusterIP par défaut, expose uniquement le service au sein du cluster Kubernetes
